seemingly working pass search tag array into search and store flattened array for subs

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -106,7 +106,7 @@ template(name='sbt')
                 
 template(name='skve')
     // a.ui.image.big.link.label.set_session_v(class=calculated_class)
-    .ui.zoomer.compact.button.set_session_v(class=calculated_class title=t)
+    .ui.zoomer.compact.circular.button.set_session_v(class=calculated_class title=t)
         if i
             i.icon(class=i)
             // +i n=i cl='ui mini inline image'
