--- a/client/home.jade
+++ b/client/home.jade
@@ -24,7 +24,7 @@ template(name='home')
                     +tag_picker
             else
                 .ui.center.aligned.basic.segment
-                    .ui.icon.massive.input
+                    .ui.icon.big.input
                         i.search.large.icon
                         input.search_tag(type='text' placeholder='search' autofocus='')
                         // .ui.label #{this}
