--- a/client/subs.jade
+++ b/client/subs.jade
@@ -1,45 +1,62 @@
 template(name='subs')
     .ui.stackable.padded.grid
         .row
-            .four.wide.column
-                .ui.inline.header #{sub_count}
-                .ui.inline.header
-                    i.fire.big.icon
-                    |groups
-                // .ui.inline.header.search_subs
-                //     |#{subreddit_docs.count} subs
-                // .smallscroll
-                if picked_sub_tags
-                    // if many_tags
-                    //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
-                    //         i.remove.icon
-                    each picked_sub_tags
-                        .ui.black.button.unpick_sub_tag #{this}
-                .medscroll
+            unless picked_sub_tags
+                .sixteen.wide.center.aligned.column
+                    .ui.inline.header 
+                        i.reddit.icon
+                        |search subreddits
+                    .ui.icon.input
+                        i.search.icon
+                        input.search_subreddits(type='text' placeholder=sub_count)
                     each subreddit_tags
                         // .ui.label #{this}
-                        a.zoomer.ui.compact.link.label.pick_sub_tag(title=count) #{name}
-            .twelve.wide.column
-                .ui.icon.input
-                    i.search.icon
-                    input.search_subreddits(type='text')
-                // +skve k='view_sub_detail' v=true l='detail' i='chevron up'
-                // +skve k='view_sub_detail' v=false l='simple' i='chevron down'
-                +skve k='sort_subs' v='subscribers' l='subscribers' i='users'
-                +skve k='sort_subs' v='name' l='name' i='title'
-                if can_skip_left
-                    .ui.icon.button.skip_left
-                        i.chevron.left.icon
-                // if can_skip_right
-                .ui.icon.button.skip_right
-                    i.chevron.right.icon 
-                .scrolling
-                    unless subreddit_docs.count
-                        .ui.center.aligned.basic.segment
-                            i.massive.yin.yang.grey.loading.icon
-                    .ui.items
-                        each subreddit_docs
-                            +subreddit_doc
+                        a.zoomer.ui.compact.circular.basic.button.pick_sub_tag(title=count) #{name}
+                   
+
+            if picked_sub_tags
+                .four.wide.column
+                    .ui.inline.header #{sub_count}
+                    // .ui.inline.header
+                    //     i.fire.big.icon
+                    //     |groups
+                    // .ui.inline.header.search_subs
+                    //     |#{subreddit_docs.count} subs
+                    // .smallscroll
+                    if picked_sub_tags
+                        // if many_tags
+                        //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
+                        //         i.remove.icon
+                        each picked_sub_tags
+                            .ui.black.button.unpick_sub_tag #{this}
+                    .medscroll
+                        each subreddit_tags
+                            // .ui.label #{this}
+                            a.zoomer.ui.compact.link.basic.circular.label.pick_sub_tag(title=count) #{name}
+                .twelve.wide.column
+                    .ui.icon.input
+                        i.search.icon
+                        input.search_subreddits(type='text' placeholder=sub_count)
+                    // +skve k='view_sub_detail' v=true l='detail' i='chevron up'
+                    // +skve k='view_sub_detail' v=false l='simple' i='chevron down'
+                    +skve k='sort_subs' v='subscribers' l='subscribers' i='users'
+                    +skve k='sort_subs' v='name' l='name' i='header'
+                    +skve k='subs_limit' v=10 l='10'
+                    +skve k='subs_limit' v=20 l='20'
+                    +skve k='subs_limit' v=50 l='50'
+                    // if can_skip_left
+                    //     .ui.icon.button.skip_left
+                    //         i.chevron.left.icon
+                    // // if can_skip_right
+                    // .ui.icon.button.skip_right
+                    //     i.chevron.right.icon 
+                    .scrolling
+                        unless subreddit_docs.count
+                            .ui.center.aligned.basic.segment
+                                i.massive.yin.yang.grey.loading.icon
+                        .ui.items
+                            each subreddit_docs
+                                +subreddit_doc
 
 
 template(name='subreddit_doc')
