--- a/client/new.css
+++ b/client/new.css
@@ -1,7 +1,7 @@
 .zoomer:hover {
     transition: all .25s ease !important; 
     /*text-shadow: 0 0 3px grey !important;*/
-    filter: drop-shadow(0px 0px 4px grey);    
+    filter: drop-shadow(0px 0px 2px white);    
     z-index: 1000 !important;
     animation: fadein .225s !important;
     transform: scale(1.05) !important;
