--- a/client/style.css
+++ b/client/style.css
@@ -7,18 +7,19 @@ body {
   /*line-height: 200% !important; */
   scroll-behavior: smooth;
   /*margin-top: 5em;*/
+  /*filter: invert(.9) !important; */
   -webkit-font-smoothing: antialiased; 
   -moz-osx-font-smoothing: grayscale;
   
-  background: rgba(200,200,200,.1) !important;
+  background: rgba(200,200,200,.2) !important;
   overscroll-behavior: none; 
   transition: all .25s ease !important;
   /*background: #0e0e44 !important; */
 }
-/*.invert{*/
-/*    background: rgba(0,0,0,.9) !important; */
-/*    filter: invert(.9) !important; */
-/*}*/
+.invert{
+    background: rgba(0,0,0,.9) !important; 
+    filter: invert(.9) !important; 
+}
 /*.full {*/
 /*  max-width: 100% !important;*/
 /*}*/
