--- a/client/subs.jade
+++ b/client/subs.jade
@@ -8,18 +8,16 @@ template(name='subs')
                         |search subreddits
                     .ui.icon.input
                         i.search.icon
-                        input.search_subreddits(type='text' placeholder=sub_count)
+                        input.search_subreddits(type='text' placeholder=sub_count autofocus='')
                     each subreddit_tags
                         // .ui.label #{this}
                         a.zoomer.ui.compact.circular.basic.button.pick_sub_tag(title=count) #{name}
                    
 
             if picked_sub_tags
-                .four.wide.column
-                    .ui.inline.header #{sub_count}
-                    // .ui.inline.header
-                    //     i.fire.big.icon
-                    //     |groups
+                .four.wide.right.aligned.column
+                    // .ui.inline.header #{sub_count}
+                    i.reddit.big.icon
                     // .ui.inline.header.search_subs
                     //     |#{subreddit_docs.count} subs
                     // .smallscroll
@@ -28,19 +26,19 @@ template(name='subs')
                         //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
                         //         i.remove.icon
                         each picked_sub_tags
-                            .ui.black.button.unpick_sub_tag #{this}
+                            .ui.black.circular.button.unpick_sub_tag #{this}
                     .ui.icon.input
                         i.search.icon
                         input.search_subreddits(type='text' placeholder=sub_count)
                     .medscroll
                         each subreddit_tags
                             // .ui.label #{this}
-                            a.zoomer.ui.compact.link.basic.circular.label.pick_sub_tag(title=count) #{name}
+                            a.zoomer.ui.compact.small.basic.circular.button.pick_sub_tag(title=count) #{name}
                 .twelve.wide.column
                     // +skve k='view_sub_detail' v=true l='detail' i='chevron up'
                     // +skve k='view_sub_detail' v=false l='simple' i='chevron down'
-                    +skve k='sort_subs' v='subscribers' l='subscribers' i='users'
-                    +skve k='sort_subs' v='name' l='name' i='header'
+                    +skve k='sort_subs' v='data.subscribers' l='subscribers' i='users'
+                    +skve k='sort_subs' v='data.title' l='name' i='header'
                     +skve k='subs_limit' v=10 l='10'
                     +skve k='subs_limit' v=20 l='20'
                     +skve k='subs_limit' v=50 l='50'
@@ -53,7 +51,7 @@ template(name='subs')
                     .scrolling
                         unless subreddit_docs.count
                             .ui.center.aligned.basic.segment
-                                i.massive.yin.yang.grey.loading.icon
+                                i.massive.reddit.grey.loading.icon
                         .ui.items
                             each subreddit_docs
                                 +subreddit_doc
