--- a/client/style.css
+++ b/client/style.css
@@ -24,7 +24,7 @@ body {
 /*  max-width: 100% !important;*/
 /*}*/
 .search_tag {
-  margin: .5em !important;
+  /*margin: .5em !important;*/
 }
 /*.no_left {*/
 /*  padding-left:0px !important;*/
@@ -62,8 +62,8 @@ body {
 .seg {
   background: rgba(250,250,250,.85) !important;
   /*opacity: .5;*/
-  /*padding:15px;*/
-  /*border-radius:10px !important;*/
+  padding:10px !important;
+  border-radius:10px !important;
 }
 /*.pulsing {*/
     /*height: 250px; */
@@ -458,16 +458,16 @@ p {
 /*.ui.image:active {*/
 /*  transform: scale(.97) !important;*/
 /*}*/
-/*.zoomer:hover {*/
-/*    transition: all .25s ease !important; */
-/*    text-shadow: 0 0 3px grey !important;*/
-/*    filter: drop-shadow(0px 0px 4px grey);    */
-/*    z-index: 1000 !important;*/
-/*    animation: fadein .25s !important;*/
-/*    transform: scale(1.05) !important;*/
-/*    animation: fadein .25s !important;*/
-/*    animation: fadeout .25s; */
-/*}*/
+.zoomer:hover {
+    transition: all .5s ease !important; 
+    /*text-shadow: 0 0 3px grey !important;*/
+    /*filter: drop-shadow(0px 0px 4px grey);    */
+    z-index: 1000 !important;
+    animation: fadein .25s !important;
+    transform: scale(1.02) !important;
+    animation: fadein .25s !important;
+    animation: fadeout .25s; 
+}
 /*img.zoomer:hover {*/
 /*    transition: all ..25s ease !important; */
 /*    z-index: 1000 !important;*/
@@ -642,16 +642,21 @@ p {
 
 
 
-/*.spacer {*/
-/*  height: 15px;*/
-/*}*/
+.spacer {
+  height: 15px;
+}
 
-.label {
+.label, .button, .item, .description {
+  vertical-align: middle !important;
   margin:1px !important;
 }
 
+.label {
+  padding: 5px !important;
+}
+
 input {
-  border-radius: 10px !important;
+  border-radius: 20px !important;
     /*margin: 15px !important;*/
 }
 
@@ -738,12 +743,12 @@ input {
 /*} */
 
 
-/*.button,.card,.image,.header,p,img,.say,.pointer, .item, p, .f12{*/
-/*    animation: fadein .25s !important;*/
-/*    -webkit-transition: opacity .25s ease-in !important;*/
-/*    -webkit-transition: opacity .25s ease-out; */
-/*    animation: fadeout .25s; */
-/*}*/
+.button,.card,.image,.header,p,img,.say,.pointer, .item, p, .f12{
+    animation: fadein .25s !important;
+    -webkit-transition: opacity .25s ease-in !important;
+    -webkit-transition: opacity .25s ease-out; 
+    animation: fadeout .25s; 
+}
 
 
 /*.icon:not(.loading){*/
@@ -904,17 +909,6 @@ input {
 /*  }*/
 /*}*/
 
-
-.zoomer:hover {
-    transition: all .25s ease !important; 
-    /*text-shadow: 0 0 3px grey !important;*/
-    filter: drop-shadow(0px 0px 2px white);    
-    z-index: 1000 !important;
-    animation: fadein .25s !important;
-    transform: scale(1.1) !important;
-    animation: fadein .25s !important;
-    animation: fadeout .25s;
-}
 
 
 .ui.image:active {
