--- a/client/style.css
+++ b/client/style.css
@@ -13,7 +13,7 @@ body {
   
   background: rgba(200,200,200,.2) !important;
   overscroll-behavior: none; 
-  transition: all .25s ease !important;
+  transition: all .5s ease !important;
   /*background: #0e0e44 !important; */
 }
 .invert{
@@ -35,18 +35,18 @@ body {
 /*  transform: scale(1.2) !important;*/
 /*}*/
 /*.tag_select_class:hover {*/
-/*    animation: fadein .25s !important;*/
-/*    animation: fadeout .25s; */
-/*    transition: all .25s ease !important; */
+/*    animation: fadein .5s !important;*/
+/*    animation: fadeout .5s; */
+/*    transition: all .5s ease !important; */
     /*cursor: help !important;*/
     /*color: black !important; */
 /*    transform: scale(1.5) !important;*/
 /*}*/
 
 /*.mark_viewed {*/
-/*    animation: fadein .25s !important;*/
-/*    animation: fadeout .25s; */
-/*    transition: all .25s ease !important; */
+/*    animation: fadein .5s !important;*/
+/*    animation: fadeout .5s; */
+/*    transition: all .5s ease !important; */
     /*cursor: help !important;*/
     /*color: black !important; */
     /*transform: scale(1.5) !important;*/
@@ -124,7 +124,7 @@ body {
 
 
 /*.tone_item {*/
-/*    transition: all .25s ease !important;*/
+/*    transition: all .5s ease !important;*/
 /*}*/
 
 /*.displaynone {*/
@@ -243,7 +243,7 @@ p {
 
 
 /*.segment:not(.pushable) {*/
-  /*transition: height .25s linear;*/
+  /*transition: height .5s linear;*/
 /*}*/
 
 .bottom_rounded {
@@ -265,7 +265,7 @@ p {
   
 /*}*/
 /*.topnav.menu {*/
-  /*transition: color .25s ease !important;*/
+  /*transition: color .5s ease !important;*/
   /*background-color: rgba(250,250,250,1) !important; */
   /*background-color: rgba(50,110,100,1) !important; */
   
@@ -277,7 +277,7 @@ p {
   /*margin-bottom: 4em; */
 /*}*/
 /*.hscroll {*/
-    /*transition: background-color .25s ease !important;*/
+    /*transition: background-color .5s ease !important;*/
     /* background-color: rgba(250,250,250,.6) !important; */
     /*background-color: rgba(50,110,100,1) !important; */
 
@@ -347,7 +347,7 @@ p {
 
 
 /*.tone_item {*/
-    /*transition: all .25s ease !important;*/
+    /*transition: all .5s ease !important;*/
 /*}*/
 
 /*.ui.button.result:hover{*/
@@ -382,7 +382,7 @@ p {
 /*}*/
 .ui.button {
   margin: 2px !important;
-  /*transition: height ..25s ease !important; */
+  /*transition: height ..5s ease !important; */
   /* background-color: rgba(200, 200, 200, 0.2) !important; */
   /* padding: 12px !important; */
   /*font-family: 'Ubuntu+Mono', sans-serif !important; */
@@ -392,28 +392,13 @@ p {
   }
 /*  */
 /*.say {*/
-    /*animation: fadein .25s !important;*/
-    /*animation: fadeout .25s; */
-/*    transition: all .25s ease !important; */
-/*}*/
-/*.say:hover {*/
-    /*animation: fadein .25s !important;*/
-    /*animation: fadeout .25s; */
-    /*transition: all .25s ease !important; */
-    /*cursor: help !important;*/
-    /*color: black !important; */
-    /*transform: scale(1.01) !important;*/
-/*}*/
-/*.raise:hover {*/
-    /*transform: scale(1.1) !important;*/
-/*    box-shadow: 1px 1px 15px 0px rgba(0,0,0,0.5);*/
-    /*padding:2px !important;*/
-    /*zoom: 105% !important;*/
-  
+    /*animation: fadein .5s !important;*/
+    /*animation: fadeout .5s; */
+/*    transition: all .5s ease !important; */
 /*}*/
 
 .pointer:hover {
-    transition: all .25s linear !important; 
+    transition: all .5s linear !important; 
     cursor: pointer !important;
 }
     /* color: black !important; */
@@ -427,79 +412,34 @@ p {
     /*filter: drop-shadow(0px 0px 5px white);    */
 /*}*/
 
-/*.zoomer {*/
-/*    animation: fadeout .25s; */
-/*    transition: all .25s ease !important; */
-
-/*}*/
-/*.zoomer:active {*/
-/*  transform: scale(.97) !important;*/
-/*}*/
-/*a:active {*/
-/*  transform: scale(.97) !important;*/
-/*}*/
-
-/*.pulse:active {*/
-/*  transform: scale(.97) !important;*/
-/*}*/
-/*.pulse:hover {*/
-/*  transform: scale(1.1) !important;*/
-/*}*/
-
-/*img, .image {*/
-/*  border-radius:10px !important;*/
-/*}*/
-/*a.segment:active {*/
-/*  transform: scale(.97) !important;*/
-/*}*/
-/*img:active {*/
-/*  transform: scale(.97) !important;*/
-/*}*/
-/*.ui.image:active {*/
-/*  transform: scale(.97) !important;*/
-/*}*/
 .zoomer:hover {
     transition: all .5s ease !important; 
     /*text-shadow: 0 0 3px grey !important;*/
     /*filter: drop-shadow(0px 0px 4px grey);    */
-    z-index: 1000 !important;
-    animation: fadein .25s !important;
+    /*z-index: 1000 !important;*/
     transform: scale(1.02) !important;
-    animation: fadein .25s !important;
-    animation: fadeout .25s; 
+    /*animation: fadein .5s !important;*/
+    /*animation: fadeout .5s; */
 }
-/*img.zoomer:hover {*/
-/*    transition: all ..25s ease !important; */
-/*    z-index: 1000 !important;*/
-/*    transform: scale(1.2) !important;*/
-/*}*/
-/*.grid {*/
-/*  margin-left:0px !important;*/
-/*  margin-right:0px !important;*/
-/*}*/
-
-/*.view_post {*/
-/*  max-width: 100% !important;*/
-/*}*/
-/*.superzoom {*/
-    /*animation: fadeout .25s; */
-/*    transition: all .25s ease !important; */
-/*    z-index:1000 !important;*/
-/*}*/
+.superzoom {
+    animation: fadeout .5s; 
+    transition: all .5s ease !important; 
+    z-index:1000 !important;
+}
 /*.superzoom:active {*/
 /*    transform: scale(1.5) !important;*/
 /*}*/
-/*.superzoom:hover {*/
-/*    transition: all .25s ease !important; */
-/*    transform: scale(2) !important;*/
+.superzoom:hover {
+    transition: all .5s ease !important; 
+    transform: scale(2) !important;
     /*transform: rotate(20deg) !important;*/
-/*    z-index:1000 !important;*/
-    /*animation: fadein .25s !important;*/
-    /*-webkit-transition: opacity .25s ease-in !important;*/
-    /* -webkit-transition: opacity .25s ease-out; */
-    /*animation: fadeout .25s; */
+    z-index:1000 !important;
+    animation: fadein .5s !important;
+    -webkit-transition: opacity .5s ease-in !important;
+    -webkit-transition: opacity .5s ease-out; 
+    animation: fadeout .5s; 
     
-/*}*/
+}
 /*.inset {*/
 /*  box-shadow: inset 3px 3px 5px 0px rgba(0,0,0,0.75);*/
 /*}*/
@@ -652,7 +592,7 @@ p {
 }
 
 .label {
-  padding: 5px !important;
+  padding: 10px !important;
 }
 
 input {
@@ -660,110 +600,28 @@ input {
     /*margin: 15px !important;*/
 }
 
-/*::-webkit-scrollbar {*/
-/*  width: 0px !important;*/
-/*}*/
-/*.wrap_input {*/
-/*    text-align:center !important;*/
-/*}*/
-/* Track */
-/*::-webkit-scrollbar-track {*/
-/*  background: grey;*/
-/*}*/
-
-/*::-webkit-scrollbar-thumb {*/
-/*  background: grey !important;*/
-/*}*/
-
-/* Handle on hover */
-/*::-webkit-scrollbar-thumb:hover {*/
-/*  background: darkgrey !important;*/
-/*}*/
-/*.pad{*/
-    /*margin: 2em;*/
-/*    margin: .2em !important;*/
-/*}*/
-/*.smallscroll{*/
-    /* padding: 5px !important;
-    border-width: 1px !important;
-    border-color: grey !important;
-    border-style: solid !important; */
-/*    max-height: 300px !important;*/
-/*    overflow-y:scroll;*/
-/*    overflow-x:hidden;*/
-    /* padding-top: .2em; */
-    /*padding: 2em;*/
-    /*padding-left: 1em;*/
-/*}*/
-/*.medscroll{*/
-    /* padding: 5px !important;
-    border-width: 1px !important;
-    border-color: grey !important;
-    border-style: solid !important; */
-/*    max-height: 500px !important;*/
-/*    overflow-y:scroll;*/
-/*    overflow-x:hidden;*/
-    /* padding-top: .2em; */
-/*    padding: 2em;*/
-    /*padding-left: 1em;*/
-/*}*/
-/*.scrolling{*/
-/*    max-height: 90vh !important;*/
-    /*min-height: 50vh !important;*/
-/*    padding: 5px !important;*/
-/*    border-width: 1px !important;*/
-/*    border-color: grey !important;*/
-/*    border-style: solid !important;*/
-/*    overflow-y:scroll;*/
-/*    overflow-x:hidden;*/
-    /*z-index:1001;
-    /*margin-top: 1em; */
-    /*padding-top: .5em; */
-    /*padding-top: 2em !important;*/
-    /*padding-left: 1em;*/
-/*}*/
-/*.forty {*/
-/*    max-height:38vh !important;*/
-/*    min-height:38vh !important;*/
-/*}*/
-/*.sixty {*/
-/*    max-height:58vh !important;*/
-/*    min-height:58vh !important;*/
-/*}*/
-
-
-/*.ui.tertiary.button{*/
-/*  margin:0px !important;*/
-/*}*/
-/*.button:active{*/
-/*    transition: all .25s !important; */
-/*    transform: translate(0, 1px) !important; */
-    /*zoom:105% !important;*/
-    /*-webkit-transform: translate(0, 1px) !important;*/
-/*} */
-
 
 .button,.card,.image,.header,p,img,.say,.pointer, .item, p, .f12{
-    animation: fadein .25s !important;
-    -webkit-transition: opacity .25s ease-in !important;
-    -webkit-transition: opacity .25s ease-out; 
-    animation: fadeout .25s; 
+    animation: fadein .5s !important;
+    -webkit-transition: opacity .5s ease-in !important;
+    -webkit-transition: opacity .5s ease-out; 
+    animation: fadeout .5s; 
 }
 
 
-/*.icon:not(.loading){*/
-/*    animation: fadein .25s !important;*/
-/*    transition: all .25s ease !important;*/
-    /* -webkit-transition: opacity .25s ease-out; */
-/*    animation: fadeout .25s; */
-/*}*/
+.icon:not(.loading){
+    animation: fadein .5s !important;
+    transition: all .5s ease !important;
+     -webkit-transition: opacity .5s ease-out; 
+    animation: fadeout .5s; 
+}
 
 
 
-/*@keyframes fadeout {*/
-/*  from { opacity: 1}*/
-/*  to   { opacity: 0}*/
-/*}*/
+@keyframes fadeout {
+  from { opacity: 1}
+  to   { opacity: 0}
+}
 
 
 .inline {
@@ -774,7 +632,7 @@ input {
 }
 
 /*.ui.header{*/
-/*  transition: all .25s ease !important;*/
+/*  transition: all .5s ease !important;*/
   /* text-transform: capitalize !important; */
   /*font-family: 'Raleway', sans-serif !important; */
   /*font-family: 'Montserrat', sans-serif !important; */
@@ -784,13 +642,13 @@ input {
   /*font-family: 'Ubuntu', sans-serif !important;*/
 /*}*/
 
-/*@keyframes fadein {*/
-/*  from { opacity: 0}*/
-/*  to   { opacity: 1}*/
-/*}*/
+@keyframes fadein {
+  from { opacity: 0}
+  to   { opacity: 1}
+}
 
 /*.result_column {*/
-  /* animation: fadein .25s; */
+  /* animation: fadein .5s; */
 /*}*/
 
 /*@media screen and (max-width: 1100px) {*/
@@ -885,22 +743,7 @@ input {
 /*}*/
 
 /*.circle-wrapper:active .circle {*/
-/*  animation: spin .25s linear infinite;*/
-/*}*/
-
-/*.success {*/
-/*  background-color: #4BB543;*/
-/*  border: 2.5px dashed #4BB543;*/
-/*}*/
-
-/*.error {*/
-/*  background-color: #CA0B00;*/
-/*  border: 2.5px dashed #CA0B00;*/
-/*}*/
-
-/*.warning {*/
-/*  background-color: #F0D500;*/
-/*  border: 2.5px dashed #F0D500;*/
+/*  animation: spin .5s linear infinite;*/
 /*}*/
 
 /*@keyframes spin { */
